--- a/styles/base/_mixin.sass
+++ b/styles/base/_mixin.sass
@@ -145,7 +145,7 @@
   @font-face
     font-family: $alias
     src: url("../fonts/" + $name + ".eot")
-    src: url("../fonts/" + $name + ".eot?#iefix") format("embedded-opentype"), url("../fonts/" + $name + ".woff") format("woff"), url("../fonts/" + $name + ".ttf") format("truetype")
+    src: url("../fonts/" + $name + ".eot?#iefix") format("embedded-opentype"), url("../fonts/" + $name + ".ttf") format("truetype")
     font-style: normal
     font-weight: normal
 
