--- a/styles/base/_variables.sass
+++ b/styles/base/_variables.sass
@@ -1,13 +1,17 @@
 //Fonts
-$font-size-base: 18px
-$font-base: Tahoma, "Times New Roman", "Bitstream Charter", Times, serif
+$font-size-base: 14px
+$font-base: "Comfortaa-Regular", "Bitstream Charter", Times, san-serif
 
 //Colors
-$color-base: #000
+$color-base: #333
 $bg-base: #fff
 
 
 //Other
-$base-size: 10px
+$base-size: 14px
 $text-transform: uppercase
 $margin_center: 0 auto
+$comfortaa-regular: "Comfortaa-Regular"
+$comfortaa-bold: "Comfortaa-Bold"
+$comfortaa-light: "Comfortaa-Light"
+
