--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -617,6 +617,47 @@ body
 //End tabs
 ////End page catalogue
 
+//Brand page
+.brand
+  background-color: #fff3fa
+  .main-title
+    margin: 60px 0
+  .catalogue-info__title
+    margin: 0 0 20px
+.brand-image
+  flex: 1
+  height: 295px
+  overflow: hidden
+  margin-right: 20px
+  img
+    width: 100%
+.video-block
+  margin-bottom: 20px
+  img
+    width: 100%
+.block-nav_page
+  +clearfix
+  padding: 0 20px
+  margin-bottom: 50px
+.nav_page-left
+  float: left
+  line-height: 30px
+.nav_page-left__link
+  font-size: 20px
+  color: #333333
+  width: 30px
+  text-align: center
+  border-right: 1px solid #000000
+  background-color: #fff
+  display: inline-block
+  &:hover
+    color: #fff
+    background-color: #ec407a
+.nav_page-right
+  float: right
+  line-height: 30px
+
+//End brand page
 
 
 
