push Slider review

--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -760,8 +760,25 @@ body
 
 //Reviews
 .card-reviews-wrap
+  margin-bottom: 30px
+  .card_item__title
+    margin-bottom: 0
+  .lSSlideOuter
+    padding-top: 30px
   .lslide
     height: 150px !important
+  .lSAction > a
+    background: url("../images/controls-review.jpg") no-repeat
+    width: 30px
+    height: 30px
+  .lSAction > .lSPrev
+    background-position: 0 0 !important
+    top: -30px !important
+    left: 94% !important
+  .lSAction > .lSNext
+    background-position: -30px 0 !important
+    top: -30px !important
+    left: 98% !important
 .card-reviews-arrows
   position: absolute
   top: 0
