push cart, delivery, about_us

--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -518,11 +518,11 @@ a:hover
 .bread_crumb-block .bread_crumb-block__link:first-child
   font-size: 18px
 //End bread crumb
+
 //Content
-.catalogue
+.section
   background-color: #fff3fa
-  .main-title
-    margin: 60px 0
+  padding: 60px 0
 .content
   flex-flow: row wrap
   +flexbox
@@ -566,6 +566,7 @@ a:hover
   line-height: 22px
   text-align: center
   margin: 20px 0
+  font-family: $comfortaa-bold
 .content__text
   margin-bottom: 10px
   text-align: justify
@@ -699,9 +700,6 @@ a:hover
 
 //Brand page
 .brand
-  background-color: #fff3fa
-  .main-title
-    margin: 60px 0
   .content__title
     margin: 0 0 20px
 .brand-image
@@ -718,7 +716,6 @@ a:hover
 .block-nav_page
   +clearfix
   padding: 0 20px
-  margin-bottom: 50px
 .nav_page-left
   float: left
   line-height: 30px
@@ -742,8 +739,6 @@ a:hover
 ////Card_item page
 //Card-slider
 .card_item
-  padding: 60px 0
-  background-color: #fff3fa
   .content__title
     margin: 0 0 30px
     text-align: left
@@ -822,6 +817,7 @@ a:hover
 .card_item__title
   font-size: 18px
   line-height: 20px
+  font-family: $comfortaa-bold
   text-transform: $text-transform
   text-align: center
   margin-bottom: 30px
@@ -910,7 +906,6 @@ a:hover
 //End video-reviews
 //Form
 .card_item-form-wrap
-  margin-bottom: 60px
   .reviews-link
     top: -30px
   .reviews-link:hover
@@ -945,6 +940,8 @@ a:hover
   width: 100%
   font-family: $comfortaa-bold
   margin-bottom: 20px
+.form-txtarea
+  height: 100px
 .radio-rate:checked
   background-color: #ec407a
   padding: 10px
@@ -983,9 +980,6 @@ a:hover
 
 //Blog page
 .blog
-  background-color: #fff3fa
-  .main-title
-    margin: 60px 0
   .block-nav_page
     padding: 0
 .blog-block
@@ -1014,6 +1008,11 @@ a:hover
 //End blog page
 
 //Blog_article
+.blog_article
+  .card_item__title
+    margin-bottom: 50px
+  .card_item-form-wrap
+    margin-left: 30%
 .blog_article-block
   flex-flow: row wrap
   +flexbox
@@ -1024,12 +1023,206 @@ a:hover
   margin-right: 20px
 .blog_article-info
   flex: 2
+.blog-bot-left
+  float: left
+.blog_article-content + .blog-bot
+  margin-top: 30px
 //End blog_article
 
+//About_us
+.about_us
+  .content__title
+    color: #ec407a
+  .about_us-title
+    color: #333333
+    margin-bottom: 40px
+    padding-bottom: 25px
+    border-bottom: 1px solid #000
+.statistics-block
+  margin: 60px 0
+  flex-flow: row wrap
+  +flexbox
+.statistics-item
+  flex: 1
+  font-family: $comfortaa-bold
+  text-align: center
+  color: #ec407a
+  padding: 0 40px
+  .content__title
+    margin: 10px 0
+.statistics-numbers
+  font-size: 40px
+  line-height: 44px
+.advantages-block
+  margin-bottom: 50px
+  flex-flow: row wrap
+  +flexbox
+.advantages-item
+  flex: 1
+  text-align: center
+  padding: 0 40px
+  .content__text
+    text-align: center
+    margin-top: 15px
+    font-size: 16px
+    line-height: 18px
+.our_team-block
+  margin: 60px 0 0
+  flex-flow: row wrap
+  +flexbox
+.our_team-item
+  flex: 1
+  padding: 0 10px
+  text-align: center
+  .content__text
+    text-align: center
+    padding: 0 20px
+    font-size: 16px
+    line-height: 18px
+//End about_us
 
+//Delivery
+.delivery
+  .content__title
+    text-align: left
+.delivery-time-block
+  font-family: $comfortaa-bold
+  .content__title
+    margin-bottom: 10px
+  .content__text
+    margin-bottom: 0
+.content__info
+  margin: 20px 0
+  font-size: 18px
+  line-height: 20px
+  color: #ec407a
+.delivery-block
+  margin-left: 100px
+  position: relative
+  margin-bottom: 30px
+  padding-top: 15px
+  .content__title
+    color: #ec407a
+    text-transform: $text-transform
+  .content__text
+    font-size: 16px
+    line-height: 18px
+    a
+      color: #ec407a
+.before-delivery1::before
+  content: '1'
+  width: 78px
+  height: 78px
+  line-height: 78px
+  color: #fff
+  font-size: 30px
+  text-align: center
+  background-color: #ec407a
+  position: absolute
+  left: -90px
+  top: 0
+  +border-radius(39px)
+.before-delivery2::before
+  content: '2'
+  width: 78px
+  height: 78px
+  line-height: 78px
+  color: #fff
+  font-size: 30px
+  background-color: #ec407a
+  text-align: center
+  position: absolute
+  left: -90px
+  top: 0
+  +border-radius(39px)
+.delivery-bottom
+  .content__title
+    font-size: 28px
+    line-height: 32px
+.phone
+  display: inline-block
+  font-size: 16px
+  line-height: 24px
+  margin: 0 30px
+  position: relative
+.mts::before
+  content: ''
+  width: 24px
+  height: 24px
+  background: url("../images/vodafone.jpg") no-repeat
+  position: absolute
+  left: -30px
+  top: 0
+.kyiv::before
+  content: ''
+  width: 24px
+  height: 24px
+  background: url("../images/kievstar.jpg") no-repeat
+  position: absolute
+  left: -30px
+  top: 0
+//End delivery
 
+//Cart
+.number-share
+  display: inline-block
+  width: 350px
+  margin-left: 20px
+.cart-table
+  td
+    border: 1px solid #999999
+    padding: 20px
+.cart-block
+  text-align: center
+  vertical-align: middle
+  span
+    color: #ec407a
+    font-size: 18px
+    line-height: 20px
+.cart-button
+  width: 15px
+  height: 15px
+  background-color: transparent
+  cursor: pointer
+.minus
+  background: url("../images/minus.png") center no-repeat
+.plus
+  background: url("../images/plus.png") center no-repeat
+.cart-input
+  border: 1px solid #000000
+  background-color: transparent
+  height: 40px
+  width: 40px
+  font-size: 24px
+  text-align: center
+  margin: 0 10px
+.cart__title
+  text-align: left
+  text-decoration: underline
+  margin-bottom: 20px
+.cart__brand
+  text-align: left
+  color: #999999
+  font-size: 20px
+  line-height: 22px
+.cart-result
+  margin-bottom: 20px
+  +clearfix
+.content__title
+  float: left
+  color: #ec407a
+.cart-summ
+  float: right
+  color: #999999
+  font-size: 20px
+  margin-top: 16px
+.cart-summ__price
+  font-size: 28px
+  line-height: 30px
+  color: #ec407a
+  margin-left: 35px
 
-
+//End cart
 
 
 
